syntax = "proto3";

package profile;

// The greeting service definition.
service Profile {
  rpc GetProfile (ProfileRequest) returns (ProfileResponse) {}
}

message ProfileRequest {
  string profile = 1;
}

message ProfileResponse {
  string profile = 1;
  string name = 2;
  string jwt = 3;
}
